# AtmosphereInterpolator

./: CMakeLists.txt  CubicSpline.cpp  CubicSpline.hpp  DenseMatrix.cpp  DenseMatrix.hpp  main.cpp
resources/: Atmosphere_1.csv  Atmosphere_2.csv
utility/: Consts.hpp  Overloads.cpp  Overloads.hpp  Triplet.hpp
